--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -20,6 +20,6 @@
 <!--    </div>-->
   <%# end %>
 
-  <%= render partial: "components/collection/collection", locals: @locals %>
+  <%= render partial: "components/collection/collection", locals: { data: @data } %>
 </section>
 
