--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -25,7 +25,7 @@
     </div>
   </section>
 
-  <%= render partial: "components/collection/collection", locals: @locals %>
+  <%= render partial: "components/collection/collection", locals: { data: @data } %>
 
   <% unless current_user %>
     <%= link_to root_path, style: "display: flex" do %>
