--- a/web/app/views/feeds/day.html.erb
+++ b/web/app/views/feeds/day.html.erb
@@ -12,7 +12,7 @@
   [<%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>]
   </script>
 
-  <%= render partial: "components/collection/collection", locals: @locals %>
+  <%= render partial: "components/collection/collection", locals: { data: @data } %>
 
   <% unless current_user %>
     <%= link_to root_path, style: "display: flex" do %>
