--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -17,9 +17,9 @@
     </section>
   <% end %>
 
-  <% if @locals&.dig(:opts, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-    <%= render partial: "components/collection/collection", locals: @locals %>
-  <% elsif @locals&.dig(:opts, :detail, :total_events_in_collection).try { |counter| counter == 0 } %>
+  <% if @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+    <%= render partial: "components/collection/collection", locals: {data: @data} %>
+  <% elsif @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter == 0 } %>
     <section class="me-feed__section" style="margin: 0 auto 25px auto;">
       <div class="me-feed__section-head">
         <h2>Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
