--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -131,10 +131,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: center;
     font-size: 11px;
     margin: 0 0 50px 0;
-    padding: 0 12px;
+    padding: 15px 12px 0 15px;
     // border: 1px solid $border-color;
 
     & i {
