--- a/web/app/assets/stylesheets/components/me-see-all.scss
+++ b/web/app/assets/stylesheets/components/me-see-all.scss
@@ -10,9 +10,9 @@
   padding: 0 0 0 3px;
 
   [data-controller="feeds"][data-action="index"] & {
-    @include mobile-only {
+    //@include mobile-only {
       display: flex;
-    }
+    //}
   }
 
   & svg {
