--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -44,6 +44,7 @@
                     kinds:      false,
                     ocurrences: true
                 },
+                continue_to: "/#{current_user.slug}/novos",
                 origin:     :feed
             }
         } %>
