--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -88,7 +88,7 @@
     min-height: 45vh;
     @include is-open-up-animated;
     @include mdc-layout-grid-media-query_("phone") {
-      padding: 24px 0 0 0;
+      padding: 0 0 0 0;
     }
 
     & .mdc-layout-grid {
