--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -84,7 +84,7 @@ $mdc-layout-grid-columns: (
         );
       }
       @include mdc-layout-grid-media-query_("phone") {
-        scroll-snap-align: center;
+        //scroll-snap-align: center;
         @include mdc-layout-grid-cell(
                 $size: "phone",
                 $default-span: 1,
@@ -302,7 +302,7 @@ $mdc-layout-grid-columns: (
     }
 
     @include mdc-layout-grid-media-query_("phone") {
-      scroll-snap-type: x;
+      //scroll-snap-type: x;
       grid-gap: var(--mdc-layout-grid-gutter-desktop, 15px);
       grid-template-columns: repeat(100, minmax(80vw, 1fr));
       overflow-y: hidden;
